--- a/AutomationExercise.csproj
+++ b/AutomationExercise.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -27,6 +27,11 @@
 
   <ItemGroup>
     <Using Include="NUnit.Framework" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="NewsletterAndContactTests\" />
+    <Folder Include="ProductAndSearchTests\" />
   </ItemGroup>
 
 </Project>
